syntax = "proto3";

package spine.web.test.given;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.web.test.given";
option java_outer_classname = "CommandsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/web/test/given/task.proto";
import "spine/web/test/given/project.proto";

message CreateTask {

    TaskId id = 1;

    string name = 2 [(required) = true];

    string description = 3;
}

message RenameTask {

    TaskId id = 1;

    string name = 2 [(required) = true];
}

message CreateProject {

    ProjectId id = 1;
}
